# ipv6-place

./: .gitignore  Cargo.toml  docker-compose.prod.yml  log
place-backend/: Cargo.toml  config.toml.example  example_tap.sh  example_tap_bridge.sh  example_tun.sh
place-backend/src/: main.rs  place.rs  settings.rs  utils.rs  websocket.rs
place-backend/src/backend/: mod.rs  smoltcp.rs  tun.rs
place-client/: Cargo.toml
place-client/src/: main.rs
place-frontend/: Cargo.toml
ziad-frontend/: index.html  shutdown.html  styles.css
